# src/app/controllers/api/users_controller.rb
@@ -1,4 +1,5 @@
 class Api::UsersController < ApplicationController
+  before_action :authenticate_user!, only: [:update, :update_password]
 
   def create
     @user = User.new(user_params)
@@ -11,10 +12,34 @@ class Api::UsersController < ApplicationController
     end
   end
 
+  def update
+    if current_user.update(name: params["name"])
+      render status: :ok
+    else
+      render status: :bad_request
+    end
+  end
+
+  def update_password
+    unless password_valid?
+      render status: :bad_request
+      return
+    end
+
+    if current_user.update!(password: params["password"])
+      render status: :ok
+    else
+      render status: :bad_request
+    end
+  end
+
   private
 
   def user_params
     params.permit(:name, :email, :password)
   end
 
+  def password_valid?
+    params["password"] == params["password_confirm"] && current_user.current_password?(params["current_password"])
+  end
 end
