# src/app/models/user.rb
@@ -1,4 +1,8 @@
 class User < ApplicationRecord
   has_secure_password
   has_many :todos, dependent: :destroy
+
+  def current_password?(current_password)
+    authenticate(current_password).present?
+  end
 end
